ncc/testsuite/negative/no-default-ctor.n
public class A
{
  public this (_ : int) { }
}

public class B : A // E: cannot find default constructor in `A'
{
  static Main () : void {  }
}
